Updates and corrections to Unit 1
Fixed typos in IDFT; Implemented Time Domain and Sonogram examples.

--- a/_units/01.md
+++ b/_units/01.md
@@ -411,11 +411,13 @@ can convert fromthe time-domain to the frequency-domain and back and recover
 your original signal exactly. The inverse DFT (IDFT) 
 looks remarkably similar to the DFT:
 \begin{equation}
-X(k)=\sum^{N-1}_{n=0}x(n)e^{i2\pi\frac{kn}{N}}
+x(k)=\frac{1}{N}\sum^{N-1}_{n=0}X(n)e^{i2\pi\frac{kn}{N}}
 \label{eq:idft}
 \end{equation}
-(if you missed it, it's a little missing "-" sign in the exponent towards the 
-right-hand side).
+<!---The above equation had been in error and is altered to correct the domain inputs, and normalization--->
+(Note that the X(n) and x(n) are swapped relative to the DFT, by convention there 
+is a 1/N normalization, and, if you missed it, there is a little missing "-" sign 
+in the exponent towards the   right-hand side).
 
 It can be difficult to form an intuition for the FT and DFT based on the 
 equations alone.  The following video provides a really nice visual demonstration
@@ -467,43 +469,48 @@ For example, above we learned that a sound's timbre or tone color is partially d
 what combinations of wave forms make up the sound.
 Looking at the images below, we are unable to see anything distinct in the timbres 
 of a short clip of a clarinet versus an oboe in the time domain.
- 
-{% comment %}
-{% include img-figure url="/MUTOR/assets/images/waveform_trombone.png" 
-           description="A waveform" 
-%} {% assign fig_waveform=fignum %}
-{% endcomment %}
+<style>
+  table, th, td {
 
-{% include begin-figure description="Clarinet Fortissimo C5" %}
-{% include begin-audio-example %}
-{% include audio-buffer name="mybuf1" src="/MUTOR/assets/audios/clar_C5_1SEC.mp3" %}
-{% include audio-player name="player" buffer="mybuf1" %}
-<table><tr><td>
-{% include begin-overlay width="300px" height="200px" %}
-{% include audio-waveform name="waveform" buffer="mybuf1" %}
-{% include audio-playhead name="playhead" player="player" %}
-{% include end-overlay %}
-</td><td>
-{% include audio-meter name="meter" %}
-</td></tr><tr><td>
-{% include audio-connection outlet="player" inlet="meter" %}
-{% include audio-transport name="transport" %}
-</td></tr></table>
-{% include end-audio-example %}
-{% include end-figure %}
-{% capture fig_waveform %}{{ fignum }}{% endcapture %}
+  }
+
+</style>
+<body>
+<table>
+  <tr>
+    <td>{% include img-figure url="/MUTOR/assets/images/waveform_clar.png" description="Clarinet C5 Time Domain" %}</td> 
+    <td>{% include img-figure url="/MUTOR/assets/images/waveform_oboe.png" description="Oboe C5 Time Domain" %}</td> 
+  </tr>
+  <tr>
+    <td><div align="center"><audio controls><source src="/MUTOR/assets/audios/clar_C5_1SEC.mp3" type="audio/mpeg">Your browser does not support the audio element.</audio></div></td>
+    <td><div align="center"><audio controls><source src="/MUTOR/assets/audios/oboe_C5_1SEC.mp3">Your browser does not support the audio element.</audio></div></td>
+  </tr>
+</table>
+</body>
 
 If we take both of these very short clips of audio and perform a Fourier transform
 on these waveforms we can move them from the time domain to the frequency 
 domain and suspend them in time.
 
+<style>
+  table, th, td {
+
+  }
+
+</style>
+<body>
+<table>
+  <tr>
+    <td>{% include img-figure url="/MUTOR/assets/images/sonogram-clar.png" description="Clarinet C5 Frequency Domain" %}</td> 
+    <td>{% include img-figure url="/MUTOR/assets/images/sonogram-oboe.png" description="Oboe C5 Frequency Domain" %}</td> 
+  </tr>
+</table>
+</body>
+
 Looking at these exact same clips of sound, but now in the frequency domain, we 
 can see that the two sounds are very different.
 Inspecting these audio clips in the frequency domain allows us to see an audio 
-fingerprint of each of the instrument's timbres.
-
-> Img of Other two? 
-
+fingerprint of each of the instrument's timbres. 
 Using spectrograms is only made possible with the Fourier transform and 
 is the basis for investigating questions of musical timbre, automatic chord 
 transcription, as well as many other tasks of musical analysis. 
