Revert "Revert "Merge branch 'master' of https://github.com/MUTOR-2/MUTOR""
This reverts commit 152ba932494858beb15e850dd41ebeadcef69de9.

--- a/_units/04.md
+++ b/_units/04.md
@@ -135,7 +135,7 @@ inner or upper voices is considered consonant and needs no special treatement.
 {% include note author="jm" text="need an audio example of these chords" %}
 {% include img-figure url="/MUTOR/assets/images/fourths.png" 
 description="In common practice tonality, a fourth between the bottom voices 
-is dissonant, while one in the inner voices is consonant." %}
+is dissonant, while one in the inner voices is consonant." width="300px" %}
 
 This suggests that context matters, and the attribution of "dissonant" or
 "consonant" to an interval, the physical, sounding object, 
@@ -185,7 +185,7 @@ membrane to the other.
 {% include img-figure url="/MUTOR/assets/images/bekesy.png"
 description="von B&eacute;k&eacute;sy's measurement of basilar membrane 
 displacement as a function of frequency and position along the length of 
-the membrane." %}
+the membrane." width="300px" %}
 Figure {{ fignum }} shows von B&eacute;k&eacute;sy's measurements of the 
 displacement of the basilar membrane in response to auditory stimuli
 of different frequencies {% include cite ref="bekesy_nobel" %}. 
@@ -325,7 +325,7 @@ chord from Arnold Schoenberg's work *Farben*, Op. 16.
 
 {% include img-figure url="/MUTOR/assets/images/farbenex.png"
 description="Roughness estimates for three orchestrations of the same
-harmony from Arnold Schoenberg's Farben, Op. 16." %}
+harmony from Arnold Schoenberg's Farben, Op. 16." width="400px" %}
 
 {% include begin-figure description="Farben, first orchestration" %}
 <audio controls>
@@ -350,7 +350,7 @@ comparison, and very different from each other. This can partly be explained
 by looking at the spectra in the figure below.
 
 {% include img-figure url="/MUTOR/assets/images/farbenorchestration.GIF"
-description="Spectral analysis of three orchestratiosn of the 'Farben'
+description="Spectral analysis of three orchestrations of the 'Farben'
 chord." %}
 
 In the second of Schoenberg's orchestrations, the rougher of the two,
@@ -420,7 +420,7 @@ plot is greatly reduced than that of the minor second.
 
 # Top-Down Processing and Its Effect on Dissonance
 
-## Interval Heirarchies
+## Interval Hierarchies
 
 Our perception of dissonance is not absolute, that is to say, context matters.
 In 1968, Kameoka and Kuriyagawa demonstrated 
@@ -431,7 +431,7 @@ Kameoka and Kuriyagawa's hierarchy of intervals." %}
 {% include end-figure %}
 
 {% include img-figure url="/MUTOR/assets/images/kameoka-hierarchy.png"
-description="Interval hierarchy (Kameoka and Kuriyagawa)" %}
+description="Interval hierarchy (Kameoka and Kuriyagawa)" width="350px" %}
 
 
 ## Counterpoint and the Wright-Bregman Hypothesis
