--- a/_units/08.md
+++ b/_units/08.md
@@ -1,13 +1,13 @@
 ---
 ###
-# unit information: 
+# unit information:
 # Unit 8: Gestalt and Melody
 ###
 title: Gestalt and Melody
 number: 8
-short_description: Unit on Gestalt and Melody 
+short_description: Unit on Gestalt and Melody
 summary: In this unit we have looked at several perceptual principles which give rise to our experience of melody and melodic processes. The melodic processes we discussed include interval sizes and melodic contour. The Implication-Realization Model, the gap fill principle, and the Gestalt processes of visual perception are all good predictors of the way melodies tend to unfold. Statistical models also play an important role in our understanding and production of melody. Melodies can be modeled as a Hidden Markov Model, or a chain of conditional probabilities. With a matrix that dictates transitions between melodic intervals, we can generate many interesting melodies with predetermined characteristics. Texture arises from the confluence of multiple melodies. The axes of texture space can be defined as onset synchrony and semblant motion, and the resulting figure enables the differentiation between musical styles.
-authors: 
+authors:
  - Georg Hajdu
  - Psyche Loui
 topics: [Gestalt Psychology, Gestalt Principles of Melody, Texture Space]
@@ -30,8 +30,8 @@ mathjax: true
 
 # Introduction
 
-In this unit we will discuss melody from a Gestalt perspective. Gestalt psychology is a direction within psychology that describes human perception as the ability to identify structures and principles of order in sensory information. In his 1890 article _Über Gestaltqualitäten_ (engl. _On Gestalt Qualities_), Austrian philosopher Christian von Ehrenfels made the claim that perception contains qualities that do not result from the arrangement of simple sensory qualities. Ehrenfels' research was the point of departure for Wertheimer, Koffka and Köhler who outlined Gestalt theory during the early 1910s while working at the Frankfurt university. 
-According to  Ehrenfels, a melody could serve as an example for such a Gestalt quality, since the tones as elements of the melody can be replaced by completely different tones, and it would still be heard as the same melody provided that the arrangement relationship between the tones is preserved.  A melody is defined as a series of pitches presented in succession. (This is in contrast to simultaneously presented pitches, which defines harmony as discussed in the next unit.) From a perceptual perspective, much of the importance of melody lies in the relationships between successive pitches in a melody, i.e. interval sizes and directions. Models of interval sizes, such as Implication Realization Model, Gap Fill, and Gestalt theories, are closely related to expectation. At a larger scale, the overall pattern of the melody, as dictated by the melodic contour, plays a crucial role in melodic perception. Knowledge in the statistical processes that generate melodies, such as Hidden Markov Models, can be useful in composition, especially given its potential in the automatic composition of large sets of melodies. 
+In this unit we will discuss melody from a Gestalt perspective. Gestalt psychology is a direction within psychology that describes human perception as the ability to identify structures and principles of order in sensory information. In his 1890 article _Über Gestaltqualitäten_ (engl. _On Gestalt Qualities_), Austrian philosopher Christian von Ehrenfels made the claim that perception contains qualities that do not result from the arrangement of simple sensory qualities. Ehrenfels' research was the point of departure for Wertheimer, Koffka and Köhler who outlined Gestalt theory during the early 1910s while working at the Frankfurt university.
+According to  Ehrenfels, a melody could serve as an example for such a Gestalt quality, since the tones as elements of the melody can be replaced by completely different tones, and it would still be heard as the same melody provided that the arrangement relationship between the tones is preserved.  A melody is defined as a series of pitches presented in succession. (This is in contrast to simultaneously presented pitches, which defines harmony as discussed in the next unit.) From a perceptual perspective, much of the importance of melody lies in the relationships between successive pitches in a melody, i.e. interval sizes and directions. Models of interval sizes, such as Implication Realization Model, Gap Fill, and Gestalt theories, are closely related to expectation. At a larger scale, the overall pattern of the melody, as dictated by the melodic contour, plays a crucial role in melodic perception. Knowledge in the statistical processes that generate melodies, such as Hidden Markov Models, can be useful in composition, especially given its potential in the automatic composition of large sets of melodies.
 The combination of melodies gives rise to musical texture, and the creation of musical texture requires attention not only to each melody in itself, but to the interactions between melodies, commonly also referred to as voice leading and counterpoint.
 
 The rules of voice leading can be related to a perceptual Texture Space, which in turn is capable of representing groups of melodies and their temporal and Gestalt relationships.
@@ -61,12 +61,12 @@ Example in the sound domain: The difference between quieter and farther away. Th
 {% include img-figure url="/MUTOR/assets/images/unit8_Size_Constancy.png" description="We have developed the ability to perceive the size of an object independently of its distance" %}
 
 ## Spatial and Temporal Inversion
-The perception of objects can be confusing if the spatial or temporal order is reversed, as in the case of the double faces in this image, which we interpret in a specific, fixed way (this definition takes place in early childhood). 
+The perception of objects can be confusing if the spatial or temporal order is reversed, as in the case of the double faces in this image, which we interpret in a specific, fixed way (this definition takes place in early childhood).
 
 {% include img-figure url="/MUTOR/assets/images/unit8_Spacial_Inversion.png" description="The perception of objects can be confusing if the spatial or temporal order is reversed" %}
 
 The Thatcher illusion is based on the same principle:
-{% include img-figure url="/MUTOR/assets/images/unit8_Thatcher-Illusion.png" description="In an face drawn upside-down it is perceptually difficult to tell if  eyes and mouth are right-side up" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_Thatcher-Illusion.png" description="In an face drawn upside-down it is perceptually difficult to tell if  eyes and mouth are right-side up" width="400px" %}
 
 An example in the auditory domain would be the reversed sound of a cymbal, a familiar sonority in popular music, which has a distict quality while still betraying its origin.
 
@@ -75,7 +75,7 @@ An example in the auditory domain would be the reversed sound of a cymbal, a fam
     <title>The Auditory System</title>
   </head>
   <body>
-    <audio controls src="/MUTOR/assets/audios/unit8_Roland-R-8-Reverse-Cymbal.wav">
+    <audio controls src="/MUTOR/assets/audios/unit8_Reverse-Crash-Cymbal.wav">
       Your browser does not support the audio element.
     </audio>
   </body>
@@ -86,55 +86,47 @@ Perceptual Completion of incomplete information (e.g., blind spot or TV noise ex
 
 In the example on the left, as with any reason, the elongated object continues under the round disk. Even infants make such assumptions and are surprised if they do not apply.
 
-{% include img-figure url="/MUTOR/assets/images/unit8_completion-1.jpg" description="" %}
-{% include img-figure url="/MUTOR/assets/images/unit8_completion-2.jpg" description="We assume objects to continue when parts of it are hidden behind another object" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_completion-1.jpg" description="Perceptual completion" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_completion-2.jpg" description="We assume objects to continue when parts of it are hidden behind another object" width="350px" %}
 
 {% include note author="vg" text="We need an auditory example here: Sound-noise band-sound" %}
 
 # Reification: Subjective Contour
 A similar phenomenon is the _subjective contour_. It is difficult not to see that white triangle, though it does not actually exist. This phenomenon is related to virtual pitch, apparent in low-bandwidth phone calls and strinking pitch of bells. The principle behind subjective contour is referred to as _reification_: "The error of treating something that is not concrete, such as an idea, as a concrete thing." (https://en.wikipedia.org/wiki/Reification_(fallacy))
 
-{% include img-figure url="/MUTOR/assets/images/unit8_Kinazsa_Triangle.png" description="" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_Kinazsa_Triangle.png" description="Subjective contour" %}
 
 # Figure-Ground Organization
 Figure-ground organization is a Gestalt principle depicts our ability to make out a figure in front of a background. We tend to perceive as figures those parts of our perceptual fields that are convex, symmetric, small, and enclosed. The [figure–ground vase illusion](https://en.wikipedia.org/wiki/Rubin_vase) arises when the visual information given is ambiguous. In the figure below, a low quality, black and white photo of a dalmatian dog. The viewer first has to use perceptual completion to recognize the outlines of the dog against the background which could be interpreted as an overexposed scene in a park. Once the viewer has successfully analysed the scene, he or she will identify the dog much more quickly when shown the image again. Bregman has coined the term _auditory scene analysis_ to denote processes in the auditory domain analogous to figure-ground organization and perceptual grouping.
 
-{% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="Figure-ground organization" width="400px" %}
 
 # Gestalt Laws of Grouping
 According to the Gestalt psychologists, the brain uses the principles of Gestalt grouping of sensory stimuli to shape objects, especially if the incoming information is incomplete.
 The principles include:
-## Similarity 
+## Similarity
 -- elements that are more similar (i.e. share common features) are more likely to be grouped together.
 We perceive the white dots as one group and the pink dots as another group; this illustrates grouping by similarity of colour.
-{% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_similarity.png" description="" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_similarity.png" description="Principle of similarity" %}
 ## Symmetry
 -- symmetrical figures are perceived as being grouped together.
  The pair of shapes on the left is more likely to be perceived as a group compared to the pair on the right; this is because the left pair is symmetrical around the dotted line whereas the right pair is asymmetrical. 
- {% include img-figure url="/MUTOR/assets/images/unit8_symmetry2.gif" description="" %}
+ {% include img-figure url="/MUTOR/assets/images/unit8_symmetry2.gif" description="Principle of symmetry" width="400px" %}
 ## Proximity
 - elements that are close together are more likely to be grouped together.
 The dots that are closer together are perceived as being grouped together.
-{% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_proximity.png" description="" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_proximity.png" description="Principle of proximity" %}
 ## Good continuation
 - we tend to perceive figures as being continuous.
  The red diagonal is perceived as one line instead of two, due to the principle of good continuation.
-{% include img-figure url="/MUTOR/assets/images/unit8_goodcontinuation.gif" description="" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_goodcontinuation.gif" description="Principle of good continuation" width="400px" %}
 ## Closure
 - we tend to see complete figures despite missing parts.
-{% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_closure.png" description="" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_closure.png" description="Principle of closure" %}
 ## Common fate
-- elements that change similarly over time tend to be grouped together. 
-<html>
-  <head>
-    <title>Common Fate</title>
-  </head>
-  <body>
-    <video controls src="/MUTOR/assets/videos/unit8_Common-Fate.mov">
-      Your browser does not support the audio element.
-    </video>
-  </body>
-</html>
+- elements that change similarly over time tend to be grouped together.
+{% include img-figure url="/MUTOR/assets/images/unit8_Common-Fate.gif" description="Principle of common fate" %}
+
 
 # Melody
 
@@ -150,29 +142,29 @@ In this melody, each interval can be represented as its direction - up, down, or
 
 Thus, the contour of the Entertainer melody can be represented as:
 
-{% include img-figure url="/MUTOR/assets/images/unit8_entertainer3.png" description="Contour" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_entertainer3.png" description="Contour" width="400px" %}
 
-Contour is shown to be very important to the perception of melody. Deutsch (2003) demonstrates that when the contour of a melody is intact, melodies can be heard even if the pitches themselves are incorrect. (This explains why a tune is often still recognizable even when performed grossly out of tune.) If the contour is disrupted, then the melodic recognition is impaired, even when the pitch classes are retained. 
-The following demonstration (from Deutsch's 2003 CD Musical Illusions and Paradoxes) illustrates the importance of melodic contour. In the first sound file, a familiar melody is played in the correct pitch classes but in scrambled octaves, such that the melodic contour is disrupted. Can you recognize the melody? 
+Contour is shown to be very important to the perception of melody. Deutsch (2003) demonstrates that when the contour of a melody is intact, melodies can be heard even if the pitches themselves are incorrect. (This explains why a tune is often still recognizable even when performed grossly out of tune.) If the contour is disrupted, then the melodic recognition is impaired, even when the pitch classes are retained.
+The following demonstration (from Deutsch's 2003 CD Musical Illusions and Paradoxes) illustrates the importance of melodic contour. In the first sound file, a familiar melody is played in the correct pitch classes but in scrambled octaves, such that the melodic contour is disrupted. Can you recognize the melody?
 
 <html>
   <head>
     <title>Scrambled melody</title>
   </head>
   <body>
-    <audio controls src="/MUTOR/assets/audios/unit8_deutsch_scr.wav">
+    <audio controls src="/MUTOR/assets/audios/unit8_scrambledmelody.wav">
       Your browser does not support the audio element.
     </audio>
   </body>
 </html>
-Scrambled melody (source: http://www.philomel.com/) 
+Scrambled melody (source: http://www.philomel.com/)
 
 <html>
   <head>
     <title>unscrambled melody</title>
   </head>
   <body>
-    <audio controls src="/MUTOR/assets/audios/unit8_deutsch_un.wav">
+    <audio controls src="/MUTOR/assets/audios/unit8_unscrambledmelody.wav">
       Your browser does not support the audio element.
     </audio>
   </body>
@@ -181,21 +173,21 @@ Original, unscrambled melody (source: http://www.philomel.com/)
 
 ## Implication Realization Model
 
-Eugene Narmour's Implication Realization Model (1989, 1990) provides a set of predictions for melodic structure. In particular, the I-R model looks at interval sizes and directions between notes of a melody. 
+Eugene Narmour's Implication Realization Model (1989, 1990) provides a set of predictions for melodic structure. In particular, the I-R model looks at interval sizes and directions between notes of a melody.
 (PDF) Simplifying the Implication-Realization Model of Melodic Expectancy. Available from: https://www.researchgate.net/publication/230746009_Simplifying_the_Implication-Realization_Model_of_Melodic_Expectancy [accessed Aug 30 2020].
 In the I-R model, when given three notes making two intervals, the first interval is defined as the Implication interval, whereas the second interval is the Realization interval.  
 
 In general, the I-R principles successfully predicted response patterns, which did not differ as a function of musical style, formal musical training, or cultural background. In short, the results were consistent with Narmour's claim of innate influences on melodic expectancies.  
 
-{% include img-figure url="/MUTOR/assets/images/unit8_ir.gif" description="Implication and Realization Intervals" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_ir.png" description="Implication and Realization Intervals" %}
 
 ### Definitions of the I-R model
 
-The space of all possible pairs of Implied and Realized intervals. Implied intervals, with possible sizes ranging from 0 (same note) to 11 semitones (major seventh) are plotted on the Y axis. Realized intervals, ranging from 12 semitones in a different direction to 12 semitones in the same direction, are plotted on the X axis. Each possible I-R pair can be represented as a square in the grid. 
+The space of all possible pairs of Implied and Realized intervals. Implied intervals, with possible sizes ranging from 0 (same note) to 11 semitones (major seventh) are plotted on the Y axis. Realized intervals, ranging from 12 semitones in a different direction to 12 semitones in the same direction, are plotted on the X axis. Each possible I-R pair can be represented as a square in the grid.
 
 {% include img-figure url="/MUTOR/assets/images/unit8_ir1.png" description="A grid representing possible combinations of implicatove and realized intervals" %}
 
-Narmour's I-R model predicts these melodic principles: 
+Narmour's I-R model predicts these melodic principles:
 1. Registral Direction – small implication intervals are followed by realization intervals in the same direction; large implication intervals are followed by realization intervals in the opposite direction
 1. Intervallic Difference – small intervals imply similar-sized intervals; large intervals imply smaller intervals
 1. Registral Return – intervals imply similarly sized intervals in the opposite direction  
@@ -206,14 +198,14 @@ Schellenberg (1997) showed via principle component analysis that only two princi
 1. Pitch-Proximity - this principle states that when listeners hear an implicative interval in a melody, they expect the  next tone to be proximate in pitch to the second tone of the implicative interval
 1. Pitch-Reversal - this principle claims that listeners often expect the next tone to be proximate in pitch to the tone that preceded the most recently heard tone. In other words, listeners often expect the second tone of a realized interval to be proximate to the first tone of the implicative interval.
 
-{% include img-figure url="/MUTOR/assets/images/unit8_I-R_new.png" description="Quantification of principles of the revised two-factor model of the implication-realization model. Because larger intervals are assigned higher values, negative associations between the principle and expectancy data are presumed." %}
+{% include img-figure url="/MUTOR/assets/images/unit8_I-R_new.png" description="Quantification of principles of the revised two-factor model of the implication-realization model. Because larger intervals are assigned higher values, negative associations between the principle and expectancy data are presumed." width="400px" %}
 
 #### Gap-Fill
 Gap-fill was first proposed by Leonard B. Meyer in 1973 (von Hippel & Huron, 1998). The basic principle of gap-fill states that large intervals in a melody imply smaller intervals in the opposite direction. Schellenberg demonstrates that gap-fill is the logical outcome when a melody violates the pitch-proximity principle and pitch-reversal is applied.
 
-{% include img-figure url="/MUTOR/assets/images/unit8_gap_fill.gif" description="An illustration of gap-fill processes." %}
+{% include img-figure url="/MUTOR/assets/images/unit8_gap_fill.png" description="An illustration of gap-fill processes." %}
 
-Countless famous musical examples can illustrate the gap-fill principle. For instance, the tune of "My Bonnie lies over the ocean" contains a large intervallic leap upwards between "my" and "Bonnie", followed by small steps downwards in "-nie lies over the ocean." 
+Countless famous musical examples can illustrate the gap-fill principle. For instance, the tune of "My Bonnie lies over the ocean" contains a large intervallic leap upwards between "my" and "Bonnie", followed by small steps downwards in "-nie lies over the ocean."
 
 The idea of gap-fill most closely borrows from Gestalt theories in perception, which are a set of theories on how units are perceived as a whole. The Gestalt principles of similarity, proximity, good continuation, symmetry, and closure, originally used in vision, are important also for perceiving melodies as holistic, unified objects.
 
@@ -231,35 +223,33 @@ Demonstration from ASA CD: Segregation Of A Melody From Interfering Tones This d
 
 ## Hidden Markov Models
 
-A melody can be generated using a Hidden Markov Model (HMM). An HMM is a chain of sequential probabilities. Each node in a Markov model occurs with a certain probability, and predicts each of the other nodes connected to it with a certain probability. 
+A melody can be generated using a Hidden Markov Model (HMM). An HMM is a chain of sequential probabilities. Each node in a Markov model occurs with a certain probability, and predicts each of the other nodes connected to it with a certain probability.
 An example of a Hidden Markov Model can be used to predict weather:
 
 {% include img-figure url="/MUTOR/assets/images/unit8_hmm-weather.jpg" description="A Hidden Markov Model used to predict weather. (image source: http://www.cs.wisc.edu/~noto/cs540/homework/homework5/homework5.soln.html)" %}
 
-A graph of an HMM is shown above. The model predicts the weather of each day given the previous day. We can see that according to this model, the probability that a day is sunny given that the previous day is also sunny is 0.8, the probability of a foggy day given to the previous foggy day is 0.5, and the probability that a rainy day is followed by another rainy day is 0.6. Each weather state also predicts each other weather state, with lower probabilities. 
-Adapted to music, HMMs can be used to generate melodies. Each interval can be a predictor of the next interval, as specified in gap fill and the IR model. 
+A graph of an HMM is shown above. The model predicts the weather of each day given the previous day. We can see that according to this model, the probability that a day is sunny given that the previous day is also sunny is 0.8, the probability of a foggy day given to the previous foggy day is 0.5, and the probability that a rainy day is followed by another rainy day is 0.6. Each weather state also predicts each other weather state, with lower probabilities.
+Adapted to music, HMMs can be used to generate melodies. Each interval can be a predictor of the next interval, as specified in gap fill and the IR model.
 
-{% include img-figure url="/MUTOR/assets/images/unit8_hmm.gif" description="A Hidden Markov Model used to predict a melodic sequence. (image source: http://www.dlib.org/dlib/february02/birmingham/birmingham-appendix2.html)" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_hmm.png" description="A Hidden Markov Model used to predict a melodic sequence. (image source: http://www.dlib.org/dlib/february02/birmingham/birmingham-appendix2.html)" %}
 
 The following interactive example is a matrix of transitions between intervals in a melody. The melody transitions matrix below generates a melody from a Hidden Markov Model:
 
-{% include img-figure url="/MUTOR/assets/images/unit8_meltrans_patch.png" description="Screenshot of a Max patch implementing a melody transition matrix" %}
-
-{% include note author="gh" text="This calls for a new solution. Besides, the transition-formatter is missing anyway" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_markovchain.png" description="Screenshot of a Max patch implementing a melody transition matrix" %}
 
 ## Texture Space
 
-The combination of melodic material gives rise to musical texture. Huron (1989) proposes a two-dimensional space for musical texture, where the x-axis represents semblant motion whereas the y-axis represents onset asynchrony. 
+The combination of melodic material gives rise to musical texture. Huron (1989) proposes a two-dimensional space for musical texture, where the x-axis represents semblant motion whereas the y-axis represents onset asynchrony.
 
 Here are some examples of the way melodies fit in each corner of the texture space:
 1. high semblant motion, high onset synchrony (e..g Gregorian chant)
-{% include img-figure url="/MUTOR/assets/images/unit8_texture-1.png" description="Monody" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_texture-1.png" description="Monody" width="300px" %}
 2. high semblant motion, low onset synchrony (e.g. a chorale)
-{% include img-figure url="/MUTOR/assets/images/unit8_texture-2.png" description="Homophony" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_texture-2.png" description="Homophony" width="300px" %}
 3. low semblant motion, high onset synchrony (e.g. a canon)
-{% include img-figure url="/MUTOR/assets/images/unit8_texture-3.png" description="Heterophony" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_texture-3.png" description="Heterophony" width="300px" %}
 4. low semblant motion, low onset synchrony (e.g. a quadruple fugue)
-{% include img-figure url="/MUTOR/assets/images/unit8_texture-4.png" description="Polyphony" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_texture-4.png" description="Polyphony" width="300px" %}
 To fit all four kinds of melodic textures onto the texture space:
 
 {% include img-figure url="/MUTOR/assets/images/unit8_texture-space.png" description="Texture Space" %}
