--- a/_units/02.md
+++ b/_units/02.md
@@ -1,28 +1,28 @@
 ---
 ###
-# unit information: 
-# Unit 2: Auditory System 
+# unit information:
+# Unit 2: Auditory System
 ###
 title: The Auditory System
 number: 2
 short_description: Anatomy and physiology
-summary: In this unit we will discuss the biological process of hearing. We will cover the structure and function of the auditory system focusing on the elements that allow us to conceptualize hearing as an actively perceiving process, more than just a passive response to a physical stimulus. We will also compare our musical system with other species, and try to understand when and why the auditory system malfunctions and how to protect our own hearing. 
-# The biological basis of hearing 
+summary: In this unit we will discuss the biological process of hearing. We will cover the structure and function of the auditory system focusing on the elements that allow us to conceptualize hearing as an actively perceiving process, more than just a passive response to a physical stimulus. We will also compare our musical system with other species, and try to understand when and why the auditory system malfunctions and how to protect our own hearing.
+# The biological basis of hearing
 
-authors: 
+authors:
  - Psyche Loui
 topics: [Auditory Pathway, Structures and functions, Acticve Ear, Evolution of the Auditory System, Music in other Species, Hearing Damage]
-test_questions: 
+test_questions:
  - Lay out the anatomy of the auditory pathway, from the cochlea to the primary auditory cortex.
  - How does the structure of the basilar membrane reinforce its function?
  - Which of the following is most heavily implicated in being able to perceive location of sound sources?
     - inferior colliculus
     - cochlea
-    - medial geniculat enucleus 
+    - medial geniculat enucleus
     - superior olivary nuclei
- - Which of the following methods of hearing protection is the most efficient at attenuating sound? 
+ - Which of the following methods of hearing protection is the most efficient at attenuating sound?
     1. earmuffs
-    2. cottonearplugs 
+    2. cottonearplugs
     3. plasticinserts
 # we have to work on the presentation of this quiz/questions.
 
@@ -35,7 +35,7 @@ mathjax: true
 
 # How do we hear?
 
-Much of our auditory and musical functions arise from the anatomical structures of our brain and auditory system. To understand the physiological bases of musical phenomena, this unit will provide an in-depth overview of the structure and function of the auditory system. 
+Much of our auditory and musical functions arise from the anatomical structures of our brain and auditory system. To understand the physiological bases of musical phenomena, this unit will provide an in-depth overview of the structure and function of the auditory system.
 
 The auditory system is a set of biological structures and functions that enable you to hear. To understand this system, we will follow the pathway that sound travels from the outer ear to the cochlea. We will discuss how the cochlea transforms sound into neural impulses, which are then to be relayed in various transformations through the neural centers of the brainstem and midbrain before it is processed by the primary and secondary auditory cortices.
 
@@ -45,7 +45,7 @@ To get a sense of the evolution of the auditory system, we will also compare the
 
 Finally we look at when the auditory system malfunctions. Types of hearing loss and their origins will be discussed. We will consider the importance of hearing protection, and explore various ways to protect your ears.
 
-# The auditory pathway (ear & brain) 
+# The auditory pathway (ear & brain)
 
 The anatomy section of this unit will cover the peripheral and central auditory nervous systems, from the outer ear
 all the way up to the secondary auditory cortex. The auditory periphery includes various parts of the ear and ends
@@ -100,9 +100,9 @@ The cochlea, often referred to as the "hearing organ", is most important to the 
 
 The cochlea is a coiled, fluid-filled tubular structure. It is lined with membranes which divide the inside of the cochlea into fluid-filled compartments.
 
-{% include img-figure url="/MUTOR/assets/images/cochlea_dissected.png" description="Cochlea Dissected" %}
+{% include img-figure url="/MUTOR/assets/images/cochlea_dissected.png" description="Cochlea Dissected" width="400px" %}
 {% comment %} (image source: http://www.iurc.montp.inserm.fr/cric/audition/english /cochlea/fcochlea.htm) {% endcomment%}
-  
+
 A dissected cochlea of a human fetus.
 
 {% include img-figure url="/MUTOR/assets/images/cochlea_diagram.png" description="Cochlea Cross-section" %}
@@ -130,7 +130,7 @@ In its resting state, the basilar and tectorial membranes are parallel, the ster
 {% include img-figure url="/MUTOR/assets/images/ihc_mvnt.png" description="Inner Hair Cells" %}
 {% comment %} Close-up of inner hair cells with stereocilia, which open when excited by incoming sound. {% endcomment%}
 
-{% include img-figure url="/MUTOR/assets/images/ihc_ohc.png" description="Inner and Outer Hair Cells" %}
+{% include img-figure url="/MUTOR/assets/images/ihc_ohc.png" description="Inner and Outer Hair Cells" width="400px" %}
 {% comment %} Electron microscropy showing one row of inner hair cells and three rows of outer hair cells. {% endcomment%}
 
 # Tonotopic Mapping
@@ -140,15 +140,15 @@ The cochlea is a coiled structure, contains the entire length of the basilar mem
 {% include img-figure url="/MUTOR/assets/images/basilar_unrolled.png" description="Basilar Membrane Unrolled" %}
 {% comment %} (image source: http://www.cs.indiana.edu/~port/teach/641/hearing.for.linguists.html) Drawing of the unrolled cochlea, showing the basilar membrane. {% endcomment %}
 
-{% include img-figure url="/MUTOR/assets/videos/animated_basilar.gif" description="Basilar Membrane Traveling Wave Animation" %}
+{% include img-figure url="/MUTOR/assets/videos/animated_basilar.gif" description="Basilar Membrane Traveling Wave Animation" width="400px" %}
 {% comment %} (image source: http://www.cs.indiana.edu/~port/teach Animation of a wave travelling down the basilar membrane.
 /641/hearing.for.linguists.html) {% endcomment %}
 {% comment %} ALSO, IT IS LOOKING HORRIBLE! {% endcomment %}
 
-{% include img-figure url="/MUTOR/assets/images/tonotopy.png" description="Tonotopy Basilar Membrane" %}
+{% include img-figure url="/MUTOR/assets/images/tonotopy.png" description="Tonotopy Basilar Membrane" width="400px" %}
 {% comment %} (image source: Watts, 1993) Schematic of the rolled-up basilar membrane, with its optimally sensitive frequencies marked along its length. {% endcomment %}
 
-{% include img-figure url="/MUTOR/assets/images/bekesy.png" description="Data on Tonotopy from von Békésy " %}
+{% include img-figure url="/MUTOR/assets/images/bekesy.png" description="Data on Tonotopy from von Békésy " width="auto" height="500px" %}
 {% comment %} (image source: http://www.pbrc.hawaii.edu/bekesy/ taken from Nobel Lectures Physiology or Medicine 1942 - 1962, Elsevier, 1964, pp. 722-746) {% endcomment %}
 
 The observation of tonotopic mapping on the basilar membrane was first made by Georg von Békésy, who won a Nobel Prize in 1961 for this discovery. This is a diagram from von Békésy's Nobel lecture, showing that higher frequencies (in cps, or cycles per second) excited the end of the basilar membrane which was closest to the stapes (stirrup). The point of optimal excitation moved further away from the stapes as the stimulus frequency decreased.
@@ -157,24 +157,24 @@ The observation of tonotopic mapping on the basilar membrane was first made by G
 
 The brainstem and midbrain include a set of neural regions which relay the nerve impulses passed into the central nervous system via the auditory nerve. Each of these relay centers consists of a group of neurons specialized for computations which are important to the auditory system, such as amplitude change detection and sound source localization.
 
-{% include img-figure url="/MUTOR/assets/images/brainstem_anat.png" description="Brainstem Anatomy" %}
+{% include img-figure url="/MUTOR/assets/images/brainstem_anat.png" description="Brainstem Anatomy" width="auto" height="500px" %}
 
-{% include img-figure url="/MUTOR/assets/images/brainstem_diagram.png" description="Brainstem Diagram" %}
+{% include img-figure url="/MUTOR/assets/images/brainstem_diagram.png" description="Brainstem Diagram" width="400px" %}
 {% comment %} (image source: http://serous.med.buffalo.edu/hearing/ic.html) {% endcomment %}
 {% comment %} Anatomy of the brainstem, with the auditory pathway highlighted. {% endcomment %}
 
 The auditory nerve leads out of the cochlea and into the brainstem. On the surface of the brainstem, the auditory and the vestibular nerves combine and constitute the VIIIth cranial nerve. A tumor in the VIIIth cranial nerve is called acoustic neuroma and can result in deafness.
 
-{% include img-figure url="/MUTOR/assets/images/cn8.png" description="Cranial Nerve VIII (auditory nerve in red)" %}
+{% include img-figure url="/MUTOR/assets/images/cn8.png" description="Cranial Nerve VIII (auditory nerve in red)" width="500px" %}
 {% comment %} Cranial nerve, with the VIIIth nerve (auditory nerve) in red.
 (image source: http://www.gwc.maricopa.edu/class/bio201) {% endcomment %}
-  
+
 Overview of the auditory pathway from the brainstem to the cortex.
 
 1. Cochlear Nuclei
 1. Superior Olive, which plays special roles in Binaural Hearing
 1. Lateral Lemniscus
-1. Inferior Colliculus, which is especially sensitive to Amplitude Modulation 
+1. Inferior Colliculus, which is especially sensitive to Amplitude Modulation
 1. Medial Geniculate Nucleus
 1. Primary Auditory Cortex
 
@@ -194,14 +194,14 @@ The auditory system's ability to localize sounds depends to a certain extent on 
 
 Jeffress (1948) proposed a model of how the auditory system computes interaural time differences so as to localize sounds. The model involved a coincidence detector in the brain, in the form of a set of neurons that fire when the two sounds from the left and right ears reach the neuron simultaneously. These coincidence detection neurons were later found in the Nucleus Leminaris of the owl (Carr & Konishi, 1988), which corresponds to the Medial Superior Olive of mammals (Smith et al, 1998). The Lateral Superior Olive was found to be sensitive to level differences between the ears. Since the MSO is sensitive to ITDs and the LSO is sensitive to ILDs, together the superior olivary complex is responsible for much of binaural hearing.
 
-{% include img-figure url="/MUTOR/assets/images/itd.jpg" description="Interaural Time Difference" %}
-{% include img-figure url="/MUTOR/assets/images/ild.jpg" description="Interaural Level Difference" %}
+{% include img-figure url="/MUTOR/assets/images/itd.jpg" description="Interaural Time Difference" width="500px" %}
+{% include img-figure url="/MUTOR/assets/images/ild.jpg" description="Interaural Level Difference" width="500px" %}
 {% comment %} Illustrations of the concepts of A) interaural time difference (ITD) and B) interaural level difference (ILD). {% endcomment %}
 
-{% include img-figure url="/MUTOR/assets/images/mso_coincidence1.jpg" description="A. Model of Coincidence Cetection" %}
+{% include img-figure url="/MUTOR/assets/images/mso_coincidence1.jpg" description="A. Model of Coincidence Cetection" width="400px" %}
 {% comment %} (image source: http://www.physiology.wisc.edu A. Jeffress's (1948) model of coincidence detection. {% endcomment %}
 
-{% include img-figure url="/MUTOR/assets/images/mso_coincidence2.jpg" description="B. Physiological Implementation of Coincidence Detection" %}
+{% include img-figure url="/MUTOR/assets/images/mso_coincidence2.jpg" description="B. Physiological Implementation of Coincidence Detection" width="300px" %}
 {% comment %} B. Coincidence detectors for computing interaural time differences /yin/jorissmithyin98.pdf) {% endcomment %}
 {% comment %} LOOKS MOVED TO THE LEFT :/ {% endcomment %}
 
@@ -216,7 +216,7 @@ The lateral lemniscus is anatomically divided into the Ventral, Dorsal, and Inte
 
 The inferior colliculus is a collection of nuclei which receives input from the axons of the lateral lemniscus and is located in the midbrain. It operates as a site of early communication between the visual and auditory senses, as well as a feedback-providing mechanism which provides output to the cochlea.
 
-{% include img-figure url="/MUTOR/assets/images/ic.jpg" description="Inferior Colliculus" %}
+{% include img-figure url="/MUTOR/assets/images/ic.jpg" description="Inferior Colliculus" width="300px" %}
 {% comment %} (image source: http://serous.med.buffalo.edu/hearing/ic.html) Cross-section of the midbrain, with the inferior colliculi highlighted in blue. {% endcomment %}
 
 The inferior colliculus is one of the most important relay centers in the auditory system. Roles of the inferior colliculus include crossmodal communication, orienting to novel stimuli, providing efferent feedback, and detecting amplitude and frequency modulation.
@@ -230,8 +230,8 @@ Modulation detection refers to the ability of the auditory system to detect rapi
 # Amplitude Modulation
 
 One of the roles of the inferior colliculus, and also the inferior colliculus, seems to be to reflect amplitude modulation (McKinney et al, 2001). Amplitude modulation refers to the change in amplitude levels, usually at periodic rates. In musical performance, playing tremolo typically results in amplitude modulation. AM radio also relies on the application of amplitude modulation.
-     
-{% include img-figure url="/MUTOR/assets/images/ttremolo.gif" description="Tremolo" %}
+
+{% include img-figure url="/MUTOR/assets/images/ttremolo.png" description="Tremolo" width="300px" %}
 {% comment %} Tremolo - a case of amplitude modulation
 (image source: http://www.compositiontoday.com/sound_bank {% endcomment %}
 
@@ -245,23 +245,23 @@ The medial geniculate nucleus (MGN) is located In the thalamus, and is the last 
 
 The medial geniculate nucleus contains a division that is tonotopically organized. The primary function of the medial geniculate nucleus is to relay auditory impulses to the cortex.
 
-{% include img-figure url="/MUTOR/assets/images/mgn.jpg" description="Medial Geniculus Nucleus" %}
+{% include img-figure url="/MUTOR/assets/images/mgn.jpg" description="Medial Geniculus Nucleus" width="400px" %}
 {% comment %} The medial geniculate nuclei, shown here in green.
-(image source: http://sylvius.com)  {% endcomment %} 
+(image source: http://sylvius.com)  {% endcomment %}
 
-Also in the thalamus is the Lateral Geniculate Nucleus, responsible for visual capture and orienting. 
+Also in the thalamus is the Lateral Geniculate Nucleus, responsible for visual capture and orienting.
 
 ## Auditory Cortex
 
 The auditory cortex is located just under the sylvian fissure, which is the fold that divides the temporal lobe from the frontal and parital lobes in the brain.
 
-{% include img-figure url="/MUTOR/assets/images/audctx1-2.png" description="The Sylvian fissure, with the Auditory Cortex below it." %}
-{% comment %} (image source: http://serous.med.buffalo.edu/hearing/auditory_cortex.html) {% endcomment %} 
+{% include img-figure url="/MUTOR/assets/images/audctx1-2.png" description="The Sylvian fissure, with the Auditory Cortex below it." width="500px" %}
+{% comment %} (image source: http://serous.med.buffalo.edu/hearing/auditory_cortex.html) {% endcomment %}
 
 The auditory cortex includes primary and secondary auditory cortices. The PrimaryAuditoryCortex (also known as A1) is located on the temporal plane, which is delineated by the Sylvian fissure on the top surface of the temporal lobe. The SecondaryAuditoryCortex (A2) surrounds the primary auditory cortex. The primary auditory cortex is tonotopically organized, with the lateral edge of the Sylvian fissure being sensitive to lower frequencies and the medial part of the cortex being sensitive to high frequencies. The primary auditory cortex is responsible for the perception of pitch, rhythm and duration, whereas the secondary auditory cortex is responsible for pattern perception, which includes the perception of speech and melodies. Persons with lesioned auditory cortices have trouble perceiving music; this is a condition known as amusia. (Peretz et al, 2003)
 
-{% include img-figure url="/MUTOR/assets/images/a1_a2.jpg" description="Auditory Cortex" %}
-{% comment %} (image source: http://www.utdallas.edu/~tres/integ/sen5/display9_21.html) {% endcomment %} 
+{% include img-figure url="/MUTOR/assets/images/a1_a2.jpg" description="Auditory Cortex" width="400px" %}
+{% comment %} (image source: http://www.utdallas.edu/~tres/integ/sen5/display9_21.html) {% endcomment %}
 
 Primary and secondary auditory cortices. A1 is shown here in blue and A2 is in red. The primary auditory cortex is tonotopically organized.
 
@@ -294,15 +294,15 @@ response to a sound stimulus. OAE recording, in combination with the recording o
 So far we have comprehensively discussed the anatomy and physiology of the human auditory system. It is important to consider how such a complex system has evolved to enable music perception for humans today. A comparison of the auditory system between humans and other species reveal that various nonhuman mammals do have auditory system analogous to humans. Monkeys, cats, chinchillas, marmosets, rats, and various other mammals all make use of pathways in their peripheral and central nervous system, from the ear to the brain, to analyze and react to sounds, although the precise points along these pathways may differ slightly among species. Birds, fish, and amphibians are also known to have auditory pathways and to analyze sounds in a reasonably similar manner. Taken together, auditory systems in all these animals probably share the same evolutionary origins as the human auditory system.
 
 Fay and Popper (2000) argued that all vertebrate auditory systems are required to do certain basic tasks including acoustic feature discrimination, sound source localization, frequency analysis, and auditory scene analysis, among others. These sorts of capabilities arose very early in the evolution of the vertebrates and have been modified by selection in different species.
-While various animals are able to hear and have auditory systems, only a few species have evolved to make music. 
+While various animals are able to hear and have auditory systems, only a few species have evolved to make music.
 
 # Music in Other Species
 
 While the act of music making is universal to all cultures in human society, only a few species of animals are known to make music systematically. Nonhuman species that sing include birds, whales, and monkeys.
 
-{% include img-figure url="/MUTOR/assets/images/animal_song.jpg" description="Animal Songs" %}
+{% include img-figure url="/MUTOR/assets/images/animal_song.jpg" description="Animal Songs" width="400px" %}
 {% comment %} (image source: Hauser & McDermott, 2003. Nature Neuroscience.) Some singing animals, and spectrograms of the songs they
-make. {% endcomment %} 
+make. {% endcomment %}
 
 The ferret and chinchilla auditory systems are similar to ours in that most of the auditory apparati are similar anatomically and functionally to the human auditory system. This makes them a good animal model to study. Bats are also of interest because of their ability to hear very high frequencies. Bats emit ultrasonic frequencies (sounds beyond our hearing range in frequency) and listen for the reflected sounds in order to determine their own location. The use of echoes to find out one's own position in space is known as echolocation.
 
@@ -311,7 +311,7 @@ Hearing damage is very prevalent, especially among rock musicians and individual
 
 Famous people suffering from hearing loss (adapted from http://www.hearnet.com/):
                                                         {% comment %} HOW TO MAKE THIS A REAL LINK? {% endcomment %}
-  
+
 - Barbra Streisand
 - Bedrich Smetana
 - Bill Clinton
@@ -321,12 +321,12 @@ Famous people suffering from hearing loss (adapted from http://www.hearnet.com/)
 - Cher
 - David Letterman
 - Cheryl Tiegs
-- Don Imus 
+- Don Imus
 - Engelbert Humperdinck
 - Pete Townshend from The Who speaks about hearing loss
 - Clive Barker
 - Dwight D. Eisenhower
-- Eric Clapton 
+- Eric Clapton
 - Jean-Jacques Rousseau
 - Jeff Beck
 - Keanu Reeves
@@ -351,7 +351,7 @@ Famous people suffering from hearing loss (adapted from http://www.hearnet.com/)
 - Peter Jennings
 - Phil Collins
 - Richard Thomas
-- Rick Emmett 
+- Rick Emmett
 - Robert Schumann
 - Roger Miller
 - Rosalynn Carter
@@ -393,9 +393,9 @@ Ranges of hearing loss:
     <audio controls src="/MUTOR/assets/audios/audiogram.mp3">
       Your browser does not support the audio element.
     </audio>
-    <p>Demo Normal Hearing vs. High-Frequency Hearing loss</p>
   </body>
 </html>
+Demo Normal Hearing vs. High-Frequency Hearing loss (Source: `[Handbook for Acoustic Ecology (Barry Truax, 1999)](https://www.sfu.ca/sonic-studio-webdav/handbook/Audiogram.html)`)
 
 The first part of this sentence is played normally, whereas the second part is filtered so as to simulate the percept of an individual with high-frequency hearing loss.
 
@@ -423,7 +423,7 @@ Sensorineural hearing loss refers to damage in the cochlea or the auditory nerve
 Presbyacusis is the loss of hearing as a result of old age. The hearing loss quite common and is most prominent at high frequencies. While the healthy young individual can hear an optimal frequency range of 20-20,000Hz, The average 50 year old can no longer hear above 17,000Hz. Because of the shape of the audiogram, which relates audibility to frequency, the loss of high-frequency hearing due to sound exposure and old age is termed ski-slope hearing loss.
 
 
-{% include img-figure url="/MUTOR/assets/images/normalvsdamaged.jpg" description="Comparison Normal Hair Cell vs. Damaged Hair Cell" %}
+{% include img-figure url="/MUTOR/assets/images/normalvsdamaged.jpg" description="Comparison Normal Hair Cell vs. Damaged Hair Cell" width="400px" %}
 {% comment %} (image source: http://www.hei.org/education/health/loss.htm) Normal versus damaged hair cells {% endcomment %}
 
 {% include img-figure url="/MUTOR/assets/images/audiogram_presby.jpg" description="Presbyacusis Audiogram" %}
@@ -444,8 +444,8 @@ When in quiet environments, we may occasionally hear a ringing in the ears. This
 1. Avoid loud sounds.
 1. Use protection for your ears.
 
-{% include img-figure url="/MUTOR/assets/images/earmuffs.jpg" description="Ear Muffs" %}
-{% include img-figure url="/MUTOR/assets/images/earplugs.jpg" description="Ear Plugs" %}
+{% include img-figure url="/MUTOR/assets/images/earmuffs.jpg" description="Ear Muffs" width="200px" %}
+{% include img-figure url="/MUTOR/assets/images/earplugs.jpg" description="Ear Plugs" width="200px" %}
 
 A rock concert generally produces sounds at around 100dB. While this is an extremely loud baseline of sound level, rock concerts tend to have relatively little dynamic variation. Sounds of 120dB or more are perceived as painfully loud.
 
@@ -457,7 +457,7 @@ If you are continually exposed to sounds above 85dB, you should wear protective 
 
 For more powerful hearing protection, especially from sudden sounds such as gunshots, one can purchase over-the-ear muffs, which provide up to 40dB of sound attenuation. To ensure maximal hearing protection, the best strategy is to combine the uses of earplugs and ear muffs, as their added contribution to sound attenuation is more effective than their individual contributions.
 
-{% include img-figure url="/MUTOR/assets/images/protection_attenuation.gif" description="Protection Attenuation" %}
+{% include img-figure url="/MUTOR/assets/images/protection_attenuation.gif" description="Protection Attenuation" width="500px" %}
 Various types of hearing protection and their noise reduction rates, as a function of frequency. {% comment %} (image source: Rossing, Moore & Wheeler, 2001) {% endcomment %}
 
 # Summary
