created audio-example and audio-figure includes that wrap the code that was originally used in unit 1

--- a/_units/01.md
+++ b/_units/01.md
@@ -74,6 +74,7 @@ sound waves, and the ways we represent them.
 %} {% assign fig_waveform=fignum %}
 {% endcomment %}
 
+{% comment %}
 {% include begin-figure description="A waveform" %}
 {% include begin-audio-example %}
 {% include audio-buffer name="mybuf" src="/MUTOR/assets/audios/trombone.mp3" %}
@@ -91,6 +92,8 @@ sound waves, and the ways we represent them.
 </td></tr></table>
 {% include end-audio-example %}
 {% include end-figure %}
+{% endcomment %}
+{% include audio-figure src="/MUTOR/assets/audios/trombone.mp3" description="A waveform" %}
 {% capture fig_waveform %}{{ fignum }}{% endcapture %}
 
 The image in figure {{ fig_waveform }} may be a familiar
