improved spectroscope, added a sonogram, and used both in a figure in 01.md

--- a/_units/01.md
+++ b/_units/01.md
@@ -460,8 +460,42 @@ is also a tacit statement that it is a significantly less important feature
 than the frequency information.
 
 Another representation of the spectrum over time is called a *sonogram*:
+{% comment %}
 {% include img-figure url="/MUTOR/assets/images/MUTOR_SpectrumAndSonogram.png" 
 description="A spectrum (left) and a sonogram (right)." %}
+{% endcomment %}
+{% include begin-figure description="A waveform (top), a spectrum (bottom left) and a sonogram (bottom right)." %}
+{% include begin-audio-example %}
+
+{% assign buffername = audio_ex_pfx | append: "buffer" %}
+{% assign playername = audio_ex_pfx | append: "player" %}
+{% assign waveformname = audio_ex_pfx | append: "waveform" %}
+{% assign playheadname = audio_ex_pfx | append: "playhead" %}
+{% assign metername = audio_ex_pfx | append: "meter" %}
+{% assign transportname = audio_ex_pfx | append: "transport" %}
+{% assign spectroscopename = audio_ex_pfx | append: "spectroscope" %}
+{% assign sonogramname = audio_ex_pfx | append: "sonogram" %}
+
+{% include audio-buffer name=buffername src="/MUTOR/assets/audios/trombone.mp3" %}
+{% include audio-player name=playername buffer= buffername %}
+<table><tr><td>
+{% include begin-overlay width="600px" height="200px" %}
+{% include audio-waveform name=waveformname buffer=buffername %}
+{% include audio-playhead name=playheadname player=playername %}
+{% include end-overlay %}
+</td><td>
+{% include audio-meter name=metername %}
+</td></tr><tr><td>
+{% include audio-spectroscope name=spectroscopename width="295px" gain="7500" %}
+{% include audio-sonogram name=sonogramname width="295px" %}
+{% include audio-connection outlet=playername inlet=spectroscopename %}
+{% include audio-connection outlet=playername inlet=sonogramname %}
+</td></tr><tr><td>
+{% include audio-connection outlet=playername inlet=metername %}
+{% include audio-transport name=transportname %}
+</td></tr></table>
+{% include end-audio-example %}
+{% include end-figure %}
 Here, we can see a history of the spectrum over time, with the height
 representing frequency, the brightness *magnitude* (related to amplitude),
 and time along the x-axis.
