--- a/_units/05.md
+++ b/_units/05.md
@@ -158,7 +158,7 @@ A five-dimensional model projecting the helix onto a torus accounts for third-re
 
 {% include img-figure url="/MUTOR/assets/images/unit5_chromatorus.png" description="Double Helix winding a torus" %}
 
-Evidence that pitch chroma and pitch height activate different parts of the brain come from Warren et al (2003) {% include note author="vg" text="‘Warren et al‘ should be a quote to our references right?" %} who showed that changes in both chroma and height activate the auditory cortex, but changes in pitch chroma activate regions anterior to the regions activated by pitch height changes.
+Evidence that pitch chroma and pitch height activate different parts of the brain come from Warren et al (2003) who showed that changes in both chroma and height activate the auditory cortex, but changes in pitch chroma activate regions anterior to the regions activated by pitch height changes.
 
 Research in gerbils (a small rodent) and humans also found a double-helical structure in the lateral lemniscus (VNLL, a region located in the brainstem) that "might play an important role in peridiocity analysis" (Langner, 2015) and has thus been labeled the _auditory double helix_.
 
