--- a/_units/01.md
+++ b/_units/01.md
@@ -93,7 +93,7 @@ sound waves, and the ways we represent them.
 {% include end-audio-example %}
 {% include end-figure %}
 {% endcomment %}
-{% include audio-figure src="/MUTOR/assets/audios/trombone.mp3" description="A waveform" %}
+{% include audio-figure src="/MUTOR/assets/audios/unit1_welcome.wav" description="A waveform" %}
 {% capture fig_waveform %}{{ fignum }}{% endcapture %}
 
 The image in figure {{ fig_waveform }} may be a familiar
